[gd_scene load_steps=3 format=3 uid="uid://cwyc5dyp10qwa"]

[ext_resource type="Texture2D" uid="uid://d1bjfn361gpif" path="res://assets/Player/PlayerSprites/Gun2.png" id="1_3eegx"]
[ext_resource type="Script" path="res://Scenes/PlayerScene/Gun1Scene/Gun.gd" id="1_4680l"]

[node name="Gun" type="Node2D"]
position = Vector2(157, 139)
script = ExtResource("1_4680l")

[node name="Gun1" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_3eegx")

[node name="Gun2" type="Sprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_3eegx")

[node name="Gun1AttackSpeed" type="Timer" parent="."]
wait_time = 0.25

[node name="Gun2AttackSpeed" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="Gun1AttackSpeed" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Gun2AttackSpeed" to="." method="_on_gun_2_attack_speed_timeout"]
